salesforce/force-app/main/default/objects/Second_Brain__c/Second_Brain__c.object-meta.xml
<CustomObject>
    <label>Second Brain</label>
    <pluralLabel>Second Brains</pluralLabel>

    <!-- Auto-number Name field for unique identifiers -->
    <nameField>
        <label>Second Brain Number</label>
        <displayFormat>SB-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>

    <!-- Deployment Configuration -->

    <!-- Sharing Model: ReadWrite for collaboration -->
    <sharingModel>ReadWrite</sharingModel>

    <!-- Feature Enablement -->

    <!-- Optional: Enhanced features -->
</CustomObject>