salesforce/force-app/main/default/objects/Second_Brain__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <description>Due date for this Second Brain entry</description>
    <inlineHelpText>When is this item due?</inlineHelpText>
    <type>DateTime</type>
</CustomField>