salesforce/force-app/main/default/objects/Second_Brain__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <description>Detailed message or notes for this entry</description>
    <inlineHelpText>Enter detailed information, notes, or context about this item</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>